css/style.css
* {
    margin: 0;
    padding: 0;

    box-sizing: border-box;

}


:root {
    --default-padding: 30px;
    --white: hsl(0, 0%, 100%);
    --black: hsl(0, 0%, 0%);
    --shadow-grey: hsl(223, 23%, 18%);
    --shadow-grey-dark: hsl(222.86, 23.33%, 11.76%);
    --shadow-grey-darkest: hsl(220, 12%, 5%);
    --default-icon-width: 55px;
    --underline-width-hover: 0px;



    /*
    --grey: rgb(193, 196, 198);
    --space-indigo: rgb(55, 69, 118);
    */
}

@font-face {
    font-family: DejaVu;
    font-weight: bold;
    src: url("../fonts/DejaVuSansMono-Bold.ttf");
}

@font-face {
    font-family: DejaVu;

    src: url("../fonts/DejaVuSansMono.ttf");
}

html {
    scroll-behavior: smooth;

}

body {
    min-height: 100dvh;
    background-color: var(--shadow-grey);
    font-family: DejaVu, serif;
    font-optical-sizing: auto;
    color: var(--white);



}

main {
    width: 100%;
    max-width: 1600px;
    /* padding: 0px clamp(25px, 8.5vw, 150px); */
    padding: 0px 25px;
    margin: 0px auto;

}


#letter-e {
    opacity: 0;
}

.bold {
    font-weight: 700;
    font-size: clamp(1.75rem, 5vw, 3rem);
    white-space: nowrap;

}

/* 
 Some symbols would break onto more than one line on desktop causing the layout to shift
 The fix was to use white space property which prevents the text from wrapping onto next line
 which throws off the hero layout
 */
.limit-symbols {
    max-width: 100%;
    display: block;
    height: 150px;

    overflow: hidden;



}


#limit-title {
    /*
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    word-wrap: break-word;
    
    display: block;
    height: 100px;
    border: solid 2px red;
    */
}

.title {
    font-weight: 400;
    font-size: clamp(2.75rem, 5vw, 4.75rem);

}







#navbar {
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
    padding: var(--default-padding);
    justify-content: space-between;
    align-items: center;
    background-color: var(--shadow-grey-dark);
    opacity: 0;
    /* box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.3); */

}

.box-shadow {
    box-shadow: 0px 4px 12px -1px rgba(0, 0, 0, 0.3);
}

.box-shadow-fadeout {
    transition: box-shadow 400ms;
    box-shadow:
        0px 4px 12px -1px rgba(0, 0, 0, 0.3),
        0px 0px 0px 1px rgba(0, 0, 0, 0.1);

}




a {
    text-decoration: none;
    color: inherit;
}

#desktop-nav {
    display: none;
}

.desktop-nav-row {
    display: flex;
    position: relative;
    gap: 65px;
    align-items: center;


}

.desktop-nav-row li {
    font-size: clamp(1rem, 1.25vw, 1.125rem);
    opacity: 0;

}

.content-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 15dvh;
}


#intro {

    align-items: flex-start;
    min-height: 100dvh;
    max-width: 1000px;
    margin: 0px auto;
    padding-top: 0dvh;
}

#about {}

#experience {}

#projects {}

#skills-interests {}

#about-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 15dvh;

}


#about-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;


}

.sharp-edge {
    width: 100%;
    padding: 1px 0px;
    background-color: var(--white);
    margin: 20px 0px 50px 0;
    border: 2px solid var(--white);
    transform: skewX(55deg);
}

#shorter-edge {
    width: 75%;
    margin-top: 80px;
    margin-bottom: 30px;
}


#polaroid {
    background-color: var(--shadow-grey-dark);
    padding: 15px 20px 100px 20px;
    margin: 25px 0px 60px 0px;
}

.card .browser {
    margin-bottom: 20px;
}

.browser {
    display: flex;
    flex-direction: column;
    border: 3px solid var(--shadow-grey-dark);
}




.browser-tab {
    display: flex;
    background-color: var(--shadow-grey);
    padding: 10px;
}

#browser-tab-about {
    background-color: var(--shadow-grey-dark);
    border-bottom: 3px solid var(--shadow-grey);
}


.desktop-browser {
    display: none;
}

.circle {
    height: 10px;
    width: 10px;
    margin-right: 12px;
    border-radius: 50%;

    &:nth-child(1) {
        background-color: #be2c2c;

    }

    &:nth-child(2) {
        background-color: #e5c63a;

    }

    &:nth-child(3) {
        background-color: #2c7d39;

    }
}






#browser-text {
    background-color: var(--shadow-grey-dark);
    padding: 30px 10px;
}

.txt-spacing {
    margin: 5px auto 15px auto;
    padding: 0px 20px;

}

#large-img {
    width: 225px;
}

.project-icons {
    list-style-type: none;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;



}



.project-icons li {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5px;

}



.project-icons li span {
    font-size: .55rem;
    padding: 0px 10px;
}


.button-theme {
    font-family: inherit;
    font-size: 15px;
    width: 200px;
    height: 50px;
    background-color: transparent;
    color: var(--white);
    border-radius: 8px;
    border: 2px solid var(--white);
    margin-top: 20px;
}



.icon-width {
    width: var(--default-icon-width);
}

#li-icon {
    width: 40px;
    margin-bottom: 10px;


}

.social-icon {
    transition: rotate 0.6s, scale 0.6s, filter 0.6s;
}

.social-icon:hover {
    cursor: pointer;
    rotate: -8deg;
    scale: 1.25;
    filter: invert(60%);

}




#social-icons {
    display: none;
}





#code-image {
    margin-bottom: 20px;
    width: clamp(100px, 18vw, 145px);
    opacity: 0;


}





.skip {
    list-style-type: none;
    counter-increment: none;
    border: 2px solid var(--white);
    border-radius: 5px;
    padding: 10px;
}

#skip-desktop {
    margin-left: -30px;
}

#skip-mobile {
    padding: 15px 25px;
}

.devicon-white {
    filter: brightness(0) invert(1);
}
/* ... */

